--- a/QuantumLang.cabal
+++ b/QuantumLang.cabal
@@ -35,6 +35,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , parsec
   default-language: Haskell2010
 
 executable QuantumLang-exe
@@ -49,6 +50,7 @@ executable QuantumLang-exe
   build-depends:
       QuantumLang
     , base >=4.7 && <5
+    , parsec
   default-language: Haskell2010
 
 test-suite QuantumLang-test
@@ -64,4 +66,5 @@ test-suite QuantumLang-test
   build-depends:
       QuantumLang
     , base >=4.7 && <5
+    , parsec
   default-language: Haskell2010
